Fonts and sources

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </nav>
         </header>
         <div id="intro" class="test">
-            <img src="sources/bgimg.png" alt="">
+            <img src="sources/drawings/hero.png" alt="">
             <h1>
                 WELCOME TO THE COLLECTIVE
             </h1>
