Nav and hero styling

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
                         <li data-page="faqs">FAQS</li>
                     </ul>
                     <div class="test">
-                        <a href="https://twitter.com/xyzcoll3ctiv3?s=21&t=bC7Ht8okpB7FCH8RgV_y-g"><img src="" alt="Twitter"></a>
-                        <a href="https://discord.com/invite/e8gt8eJEcv"><img src="" alt="Discord"></a>
-                        <a href="https://magiceden.io/marketplace/xyz_collective"><img src="" alt="MagicEden"></a>
+                        <a href="https://twitter.com/xyzcoll3ctiv3?s=21&t=bC7Ht8okpB7FCH8RgV_y-g"><img id="twitter" src="sources/logo/twitter.png" alt="Twitter"></a>
+                        <a href="https://discord.com/invite/e8gt8eJEcv"><img id="discord" src="sources/logo/discord.png" alt="Discord"></a>
+                        <a href="https://magiceden.io/marketplace/xyz_collective"><img id="magiceden" src="sources/logo/magiceden.png" alt="MagicEden"></a>
                     </div>
                 </div>
             </nav>
         </header>
         <div id="intro" class="test">
-            <img src="sources/drawings/hero.png" alt="">
+            <img src="sources/patterns/prism.jpg" alt="">
             <h1>
                 WELCOME TO THE COLLECTIVE
             </h1>
