--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XYZ Collective</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="sources/logo/xyz.png" />
     <script defer type="text/javascript" src="main.js"></script>
 </head>
 <body>
     <div id="main">
         <header>
             <nav>
-                <img src="" alt="Home" class="test">
+                <a href="index.html"><img src="sources/logo/xyz.png" alt="Home" class="test"></a>
                 <div>
                     <ul class="test">
-                        <li data-page="info">ABOUT</li>
-                        <li data-page="join">JOIN US</li>
-                        <li data-page="roadmap">ROADMAP</li>
-                        <li data-page="team">TEAM</li>
-                        <li data-page="faqs">FAQS</li>
+                        <li><a href="#"  data-page="join">JOIN US</a></li>
+                        <li><a href="#"  data-page="info">ABOUT</a></li>
+                        <li><a href="#"  data-page="roadmap">ROADMAP</a></li>
+                        <li><a href="#"  data-page="team">TEAM</a></li>
+                        <li><a href="#"  data-page="faqs">FAQS</a></li>
                     </ul>
                     <div class="test">
                         <a href="https://twitter.com/xyzcoll3ctiv3?s=21&t=bC7Ht8okpB7FCH8RgV_y-g"><img id="twitter" src="sources/logo/twitter.png" alt="Twitter"></a>
@@ -29,24 +30,23 @@
                 </div>
             </nav>
         </header>
-        <div id="intro" class="test">
+        <div id="hero" class="test">
             <img src="sources/patterns/prism.jpg" alt="">
             <h1>
                 WELCOME TO THE COLLECTIVE
             </h1>
         </div>
         <div id="content" class="test">
-            <div id="info" class="test">
+            <div id="join" class="test">
+                <div class="test">
+                    <img src="sources/drawings/banner.png" alt="">
+                    <h1>BE PART OF THE FAMILY</h1>
+                </div>
+                <p>Join our great community in this awesome journey through the NFT space. Chat with us in our Discord and keep updated with project news and ongoing progress, we also have daily collabs and giveaways waiting for you. Get your own exclusive XYZCollective NFT on MagicEden and enjoy the experience we have designed for you ;)</p>
+            </div>
+            <div id="info" class="inverted test">
                 <h1>
                     About us
-                </h1>
-                <div class="test">
-                    
-                </div>
-            </div>
-            <div id="join" class="test">
-                <h1>
-                    Join us
                 </h1>
                 <div class="test">
                     
