--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="sources/logo/xyz.png" />
     <script defer type="text/javascript" src="main.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kanit|Rock+Salt|Stalinist+One">
 </head>
 <body>
     <div id="main">
@@ -16,11 +17,11 @@
                 <a href="index.html"><img src="sources/logo/xyz.png" alt="Home" class="test"></a>
                 <div>
                     <ul class="test">
-                        <li><a href="#"  data-page="join">JOIN US</a></li>
-                        <li><a href="#"  data-page="info">ABOUT</a></li>
-                        <li><a href="#"  data-page="roadmap">ROADMAP</a></li>
-                        <li><a href="#"  data-page="team">TEAM</a></li>
-                        <li><a href="#"  data-page="faqs">FAQS</a></li>
+                        <li data-page="join">JOIN US</li>
+                        <li data-page="info">ABOUT</li>
+                        <li data-page="roadmap">ROADMAP</li>
+                        <li data-page="team">TEAM</li>
+                        <li data-page="faqs">FAQS</li>
                     </ul>
                     <div class="test">
                         <a href="https://twitter.com/xyzcoll3ctiv3?s=21&t=bC7Ht8okpB7FCH8RgV_y-g"><img id="twitter" src="sources/logo/twitter.png" alt="Twitter"></a>
@@ -38,18 +39,23 @@
         </div>
         <div id="content" class="test">
             <div id="join" class="test">
-                <div class="test">
+                <div class="banner">
                     <img src="sources/drawings/banner.png" alt="">
                     <h1>BE PART OF THE FAMILY</h1>
                 </div>
                 <p>Join our great community in this awesome journey through the NFT space. Chat with us in our Discord and keep updated with project news and ongoing progress, we also have daily collabs and giveaways waiting for you. Get your own exclusive XYZCollective NFT on MagicEden and enjoy the experience we have designed for you ;)</p>
+                <!--<div class="buttons">
+                    <a href="https://discord.com/invite/e8gt8eJEcv" class="button"><img src="sources/logo/ogdiscord.png" alt="Discord"></a>
+                    <a href="https://magiceden.io/marketplace/xyz_collective" class="button"><img src="sources/logo/ogmagiceden.png" alt="MagicEden"></a>
+                </div>-->
             </div>
-            <div id="info" class="inverted test">
+            <div id="info" class="redtheme">
                 <h1>
                     About us
                 </h1>
                 <div class="test">
-                    
+                    <img src="sources/pfps/collection.gif" alt="The Collection">
+                    <div class="test"><p>Lorem ipsum res eveniet quae, libero nam at.</p></div>
                 </div>
             </div>
             <div id="roadmap" class="test">
@@ -64,7 +70,7 @@
                 <h1>
                     The team
                 </h1>
-                <div class="test">
+                <div class="redtheme">
 
                 </div>
             </div>
