--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
                     <h1>BE PART OF THE FAMILY</h1>
                 </div>
                 <p>Join our great community in this awesome journey through the NFT space. Chat with us in our Discord and keep updated with project news and ongoing progress, we also have daily collabs and giveaways waiting for you. Get your own exclusive XYZCollective NFT on MagicEden and enjoy the experience we have designed for you ;)</p>
-                <!--<div class="buttons">
-                    <a href="https://discord.com/invite/e8gt8eJEcv" class="button"><img src="sources/logo/ogdiscord.png" alt="Discord"></a>
-                    <a href="https://magiceden.io/marketplace/xyz_collective" class="button"><img src="sources/logo/ogmagiceden.png" alt="MagicEden"></a>
-                </div>-->
+                <div class="test">
+                    <div class="test buttons">
+                        <a href="https://discord.com/invite/e8gt8eJEcv" class="discbutton">Go to Discord</a>
+                        <a href="https://magiceden.io/marketplace/xyz_collective" class="mebutton">Go to MagicEden</a>
+                    </div>
+                </div>
             </div>
             <div id="info" class="redtheme">
                 <h1>
@@ -58,7 +60,7 @@
                     <div class="test"><p>Lorem ipsum res eveniet quae, libero nam at.</p></div>
                 </div>
             </div>
-            <div id="roadmap" class="test">
+            <div id="roadmap" class="whitetheme">
                 <h1>
                     Roadmap v1
                 </h1>
@@ -66,11 +68,11 @@
 
                 </div>
             </div>
-            <div id="team" class="test">
+            <div id="team" class="test redtheme">
                 <h1>
                     The team
                 </h1>
-                <div class="redtheme">
+                <div>
 
                 </div>
             </div>
