--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=0.75">
     <title>XYZ Collective</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="sources/logo/xyz.png" />
@@ -55,9 +55,20 @@
                 <h1>
                     About us
                 </h1>
-                <div class="test">
-                    <img src="sources/pfps/collection.gif" alt="The Collection">
-                    <div class="test"><p>Lorem ipsum res eveniet quae, libero nam at.</p></div>
+                <div class="subsection">
+                    <h2>The collective</h2>
+                    <div class="test">
+                        <img src="sources/pfps/collection.gif" alt="The Collection">
+                        <div class="test"><p>Lorem ipsum res eveniet quae, libero nam at.</p></div>
+                    </div>
+                </div>
+                <div>
+                    <h2>XYZ</h2>
+                    
+                </div>
+                <div>
+                    <h2>The casino</h2>
+
                 </div>
             </div>
             <div id="roadmap" class="whitetheme">
