--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="sources/logo/xyz.png" />
     <script defer type="text/javascript" src="main.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kanit|Rock+Salt|Stalinist+One">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kanit|Rock+Salt|Stalinist+One|Edu+TAS+Beginner">
 </head>
 <body>
     <div id="main">
         <header>
             <nav>
-                <a href="index.html"><img src="sources/logo/xyz.png" alt="Home" class="test"></a>
+                <a href="index.html"><img src="sources/logo/xyz.png" alt="Home"></a>
                 <div>
-                    <ul class="test">
+                    <ul>
                         <li data-page="join">JOIN US</li>
                         <li data-page="info">ABOUT</li>
                         <li data-page="roadmap">ROADMAP</li>
                         <li data-page="team">TEAM</li>
                         <li data-page="faqs">FAQS</li>
                     </ul>
-                    <div class="test">
+                    <div>
                         <a href="https://twitter.com/xyzcoll3ctiv3?s=21&t=bC7Ht8okpB7FCH8RgV_y-g"><img id="twitter" src="sources/logo/twitter.png" alt="Twitter"></a>
                         <a href="https://discord.com/invite/e8gt8eJEcv"><img id="discord" src="sources/logo/discord.png" alt="Discord"></a>
                         <a href="https://magiceden.io/marketplace/xyz_collective"><img id="magiceden" src="sources/logo/magiceden.png" alt="MagicEden"></a>
@@ -31,21 +31,21 @@
                 </div>
             </nav>
         </header>
-        <div id="hero" class="test">
+        <div id="hero">
             <img src="sources/patterns/prism.jpg" alt="">
             <h1>
                 WELCOME TO THE COLLECTIVE
             </h1>
         </div>
-        <div id="content" class="test">
-            <div id="join" class="test">
+        <div id="content">
+            <div id="join" class="whitetheme">
                 <div class="banner">
                     <img src="sources/drawings/banner.png" alt="">
                     <h1>BE PART OF THE FAMILY</h1>
                 </div>
                 <p>Join our great community in this awesome journey through the NFT space. Chat with us in our Discord and keep updated with project news and ongoing progress, we also have daily collabs and giveaways waiting for you. Get your own exclusive XYZCollective NFT on MagicEden and enjoy the experience we have designed for you ;)</p>
-                <div class="test">
-                    <div class="test buttons">
+                <div>
+                    <div class="buttons">
                         <a href="https://discord.com/invite/e8gt8eJEcv" class="discbutton">Go to Discord</a>
                         <a href="https://magiceden.io/marketplace/xyz_collective" class="mebutton">Go to MagicEden</a>
                     </div>
@@ -53,46 +53,62 @@
             </div>
             <div id="info" class="redtheme">
                 <h1>
-                    About us
+                        About us
                 </h1>
-                <div class="subsection">
-                    <h2>The collective</h2>
-                    <div class="test">
-                        <img src="sources/pfps/collection.gif" alt="The Collection">
-                        <div class="test"><p>Lorem ipsum res eveniet quae, libero nam at.</p></div>
+                <div>
+                    <img src="sources/pfps/collection.gif" alt="The Collection">
+                    <div class=>
+                        <h2>The colletive</h2>
+                        <p>Lorem ipsum res eveniet quae, libero nam at.</p>
                     </div>
                 </div>
                 <div>
                     <h2>XYZ</h2>
                     
                 </div>
-                <div>
-                    <h2>The casino</h2>
-
-                </div>
             </div>
             <div id="roadmap" class="whitetheme">
                 <h1>
                     Roadmap v1
                 </h1>
-                <div class="test">
-
-                </div>
+                <p>We are currently working hard on a thrilling new roadmap. Big things are coming, keep an eye on our socials!</p>
             </div>
-            <div id="team" class="test redtheme">
+            <div id="team" class="redtheme">
                 <h1>
-                    The team
+                    The Masterminds
                 </h1>
-                <div>
+                <div class="teamcontainer">
+                    <div>
 
+                    </div>
+                    <div>
+
+                    </div>
+                    <div>
+
+                    </div>
                 </div>
             </div>
-            <div id="faqs" class="test">
-                <h1>
+            <div id="faqs">
+                <h1 class="faqstitle">
                     FAQS
                 </h1>
                 <div class="test">
-    
+                    <button class="accordion">What's an NFT?</button>
+                    <div class="panel">
+                    <p>An NFT (Non-fungible Token) is a digital asset based on blockchain technology known for being unique and immutable. This assets usually grant the owner with different benefits depending on the collection they belong.</p>
+                    </div>
+                    <button class="accordion">Supply, mint date and price?</button>
+                    <div class="panel">
+                    <p>There are 999 XYZCollective NFTs which were succesfully minted on the 9th of September of 2022 at a price of 0.01 SOL</p>
+                    </div>
+                    <button class="accordion">How can I get one XYZCollective NFT?</button>
+                    <div class="panel">
+                    <p>First you need to set up a Solana Network wallet and provide it with some funds (for more info about Solana Network and wallet management click <a href="https://blog.magiceden.io/how-to-choose-a-solana-wallet" style="color: rgb(36, 36, 253)">here</a>).If you are lucky enough and there is any listed, you can purchase yours at the current floor price (We only support MagicEden and we absolutely do not recommend P2P trades. We don't take any responsability from any P2P related issue that may occur). </p>
+                    </div>
+                    <button class="accordion">How can you tell I'm the ownership of an NFT from the collection?</button>
+                    <div class="panel">
+                    <p>We have a complete guide on Discord on how to verify yourself through Matrica service. After the verification you'll be asigned a holder different holder role with diferent benefits depending on how many XYZCollective NFTs you have</p>
                 </div>
             </div>
         </div>
