--- a/index.html
+++ b/index.html
@@ -79,13 +79,22 @@
                 </h1>
                 <div class="teamcontainer">
                     <div>
-
+                        <img src="sources/pfps/roxtar.jpg" alt="roxtar">
+                        <h3>Roxtar</h3>
+                        <p>The founder itself, the brain and the visionary, holding the community together</p>
+                        <a href="https://twitter.com/R0XTAR_"><img src="sources/logo/ogtwitter.png" alt="Roxtar's Twitter"></a>
                     </div>
                     <div>
-
+                        <img src="sources/pfps/roxtar.jpg" alt="roxtar">
+                        <h3>IsIncredible</h3>
+                        <p>The blockchain wizard, making it happen through smart contracts</p>
+                        <a href="https://twitter.com/xyzcoll3ctiv3?s=21&t=bC7Ht8okpB7FCH8RgV_y-g"><img src="sources/logo/ogtwitter.png" alt="IsIncredible's Twitter"></a>
                     </div>
                     <div>
-
+                        <img src="sources/pfps/779.png" alt="roxtar">
+                        <h3>JoelMustDeploy</h3>
+                        <p>The web dev, the one who made the beautiful site you are staring at right now</p>
+                        <a href="https://twitter.com/JoelButCrypto"><img src="sources/logo/ogtwitter.png" alt="Joel's Twitter"></a>
                     </div>
                 </div>
             </div>
