web 1.0 (still responsive issues)

--- a/index.html
+++ b/index.html
@@ -53,25 +53,54 @@
             </div>
             <div id="info" class="redtheme">
                 <h1>
-                        About us
+                    About us
                 </h1>
                 <div>
                     <img src="sources/pfps/collection.gif" alt="The Collection">
                     <div class=>
                         <h2>The colletive</h2>
-                        <p>Lorem ipsum res eveniet quae, libero nam at.</p>
+                        <p>XYZ Collective is a group of 999 students training to defeat Yuki Onna which is one of the strongest spirits in Japan culture, those estudents that don't pass the Collective School tests will be expelled. A training system (staking), new collections, a casino, top DAOs mirrored, airdrops for the most dedicated holders and much more to come. <br><br>The main goal of this project is to explore each current NFT meta and establish as many revenue streams as possible. We are currently working hard to ensure this interest, there are lots of posibilities! Holder's can benefit from this through staking their XYZCollective NFTs.</p>
                     </div>
                 </div>
                 <div>
-                    <h2>XYZ</h2>
-                    
+                    <h2>Training</h2>
+                    <p>Training is already available! Stake your XYZCollective NFTs and get 5 Merits ($MER) per day. $MER is a temporary token we'll be using until the XTRON release. Use them on raffles or save them for juicy future perks...</p>
+                    <div class="buttons">
+                        <a href="https://stake.diamondvaults.io/vault/xyzcoll3ctiv3" target="blank" class="staking">Staking site</a>
+                    </div>
+                </div>
+                <div>
+                    <h2>The Casino</h2>
+                    <p>Feeling lucky? Try some of our gambling games. Now also open to non-holders!</p>
+                    <div class="buttons">
+                        <a href="https://flipcoin-live.herokuapp.com/">CoinFlip (beta)</a>
+                    </div>
+                    <br>
+                    <p>Crash Game: In early developement</p>
+                    <p>More games coming soon...</p>
+                </div>
+                <div>
+                    <h2>The XYZ context</h2>
+                    <p>Our motto: "All things decentralized". The 3 letter combination XYZ represents decentralization in the blockchain space, but that's not the only reason we've chosen it for this project. Each letter has its own meaning related to their own independent NFT collection. There will be no such thing as empty collections, each one has a purpose and you will discover them in due time...</p>
+                    <h3><span>X</span>   - T R O N</h3>
+                    <p>The first additional collection. A brand based DAO with its own governance system and value proposal. That'll include:</p>
+                    <ul>
+                        <li>$XEON, the governance token obtained through staking</li>
+                        <li>SOCIABL3, a wallet based decentralized social network to track all your assets and connect with people along your journey through the NFT and Crypto space</li>
+                        <li>Alpha Calls and incentive system</li>
+                    </ul>
+                    <p>The XTRON site will be available before the release with in depth information about the project so keep an eye on Discord!</p>
+                    <h3><span>Y</span>   - ? ? ?</h3>
+                    <p>To be anounced...</p>
+                    <h3><span>Z</span>   - ? ? ?</h3>
+                    <p>To be anounced...</p>
                 </div>
             </div>
             <div id="roadmap" class="whitetheme">
                 <h1>
                     Roadmap v1
                 </h1>
-                <p>We are currently working hard on a thrilling new roadmap. Big things are coming, keep an eye on our socials!</p>
+                <p>We are currently working hard on a thrilling new roadmap. Big things are coming on V2, keep an eye on our socials!</p>
             </div>
             <div id="team" class="redtheme">
                 <h1>
@@ -85,7 +114,7 @@
                         <a href="https://twitter.com/R0XTAR_"><img src="sources/logo/ogtwitter.png" alt="Roxtar's Twitter"></a>
                     </div>
                     <div>
-                        <img src="sources/pfps/roxtar.jpg" alt="roxtar">
+                        <img src="sources/pfps/incredible.jpg" alt="roxtar">
                         <h3>IsIncredible</h3>
                         <p>The blockchain wizard, making it happen through smart contracts</p>
                         <a href="https://twitter.com/xyzcoll3ctiv3?s=21&t=bC7Ht8okpB7FCH8RgV_y-g"><img src="sources/logo/ogtwitter.png" alt="IsIncredible's Twitter"></a>
