--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script defer type="text/javascript" src="main.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kanit|Rock+Salt|Stalinist+One|Edu+TAS+Beginner">
 </head>
-<body>
+<body class="test">
     <div id="main">
         <header>
             <nav>
@@ -24,9 +24,9 @@
                         <li data-page="faqs">FAQS</li>
                     </ul>
                     <div>
-                        <a href="https://twitter.com/xyzcoll3ctiv3?s=21&t=bC7Ht8okpB7FCH8RgV_y-g"><img id="twitter" src="sources/logo/twitter.png" alt="Twitter"></a>
-                        <a href="https://discord.com/invite/e8gt8eJEcv"><img id="discord" src="sources/logo/discord.png" alt="Discord"></a>
-                        <a href="https://magiceden.io/marketplace/xyz_collective"><img id="magiceden" src="sources/logo/magiceden.png" alt="MagicEden"></a>
+                        <a href="https://twitter.com/xyzcoll3ctiv3?s=21&t=bC7Ht8okpB7FCH8RgV_y-g"><img class="twitter xyztype" src="sources/logo/twitter.png" alt="Twitter"><img class="twitter ogtype" src="sources/logo/ogtwitter.png" alt="Twitter"></a>
+                        <a href="https://discord.com/invite/e8gt8eJEcv"><img class="discord xyztype" src="sources/logo/discord.png" alt="Discord"><img class="discord ogtype" src="sources/logo/ogdiscord.png" alt="Discord"></a>
+                        <a href="https://magiceden.io/marketplace/xyz_collective"><img class="magiceden xyztype" src="sources/logo/magiceden.png" alt="MagicEden"><img class="magiceden ogtype" src="sources/logo/ogmagiceden.png" alt="MagicEden"></a>
                     </div>
                 </div>
             </nav>
@@ -37,6 +37,7 @@
                 WELCOME TO THE COLLECTIVE
             </h1>
         </div>
+        
         <div id="content">
             <div id="join" class="whitetheme">
                 <div class="banner">
@@ -104,7 +105,7 @@
             </div>
             <div id="team" class="redtheme">
                 <h1>
-                    The Masterminds
+                    Masterminds
                 </h1>
                 <div class="teamcontainer">
                     <div>
@@ -131,7 +132,7 @@
                 <h1 class="faqstitle">
                     FAQS
                 </h1>
-                <div class="test">
+                <div>
                     <button class="accordion">What's an NFT?</button>
                     <div class="panel">
                     <p>An NFT (Non-fungible Token) is a digital asset based on blockchain technology known for being unique and immutable. This assets usually grant the owner with different benefits depending on the collection they belong.</p>
@@ -150,6 +151,11 @@
                 </div>
             </div>
         </div>
+        <footer>
+            <a href="https://twitter.com/xyzcoll3ctiv3?s=21&t=bC7Ht8okpB7FCH8RgV_y-g"><img class="twitter" src="sources/logo/ogtwitter.png" alt="Twitter"></a>
+            <a href="https://discord.com/invite/e8gt8eJEcv"><img class="discord" src="sources/logo/ogdiscord.png" alt="Discord"></a>
+            <a href="https://magiceden.io/marketplace/xyz_collective"><img class="magiceden" src="sources/logo/ogmagiceden.png" alt="MagicEden"></a>
+        </footer>
     </div>
 </body>
 </html>
