--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <h2>The Casino</h2>
                     <p>Feeling lucky? Try some of our gambling games. Now also open to non-holders!</p>
                     <div class="buttons">
-                        <a href="https://flipcoin-live.herokuapp.com/">CoinFlip (beta)</a>
+                        <a href="https://beta.coll3ctiv3.xyz/">CoinFlip</a>
                     </div>
                     <br>
                     <p>Crash Game: In early developement</p>
