laptop issue solved 2

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                 <h1>
                     About us
                 </h1>
-                <div>
+                <div class=collective>
                     <img src="sources/pfps/collection.gif" alt="The Collection">
-                    <div class=>
+                    <div>
                         <h2>The colletive</h2>
                         <p>XYZ Collective is a group of 999 students training to defeat Yuki Onna which is one of the strongest spirits in Japan culture, those estudents that don't pass the Collective School tests will be expelled. A training system (staking), new collections, a casino, top DAOs mirrored, airdrops for the most dedicated holders and much more to come. <br><br>The main goal of this project is to explore each current NFT meta and establish as many revenue streams as possible. We are currently working hard to ensure this interest, there are lots of posibilities! Holder's can benefit from this through staking their XYZCollective NFTs.</p>
                     </div>
