--- a/xtron/xtron.html
+++ b/xtron/xtron.html
@@ -5,27 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <div>
-                <div class="home">
-                    <img src="" alt="">
-                </div>
-                <div class="navigation">
-                    <ul>
-                        <li data-page="lore">LORE</li>
-                        <li data-page="collection">ABOUT</li>
-                        <li data-page="utility">UTILITY</li>
-                        <li data-page="tokenomics">$XEON</li>
-                        <li data-page="team">TEAM</li>
-                    </ul>
-                </div>
-                <div class="socials">
-                    <ul></ul>
-                </div>          
+            <div class="home">
+                <img src="" alt="home">
             </div>
+            <ul class="navigation">
+                <li data-page="lore">LORE</li>
+                <li data-page="collection">ABOUT</li>
+                <li data-page="utility">UTILITY</li>
+                <li data-page="tokenomics">$XEON</li>
+                <li data-page="team">TEAM</li>
+            </ul>
+            <ul class="socials">
+                <li><img src="" alt="discord"></li>
+                <li><img src="" alt="twitter"></li>
+                <li><img src="" alt="magiceden"></li>
+            </ul>
         </nav>
     </header>
     <main>
@@ -33,19 +32,40 @@
             <img src="sources/patterns/prism.jpg" alt="">
             <h1>
                 WELCOME TO THE COLLECTIVE
-            </h1>          
+            </h1>
+            <h2>LORE</h2>
+            <h3>TEN YEARS AGO, THE COUNTDOWN STARTED.</h3>
+            <p>
+                After thousands years of destruction, humanity’s home was finally reaching it’s last days. The atmosphere was slowly collapsing in on itself, in turn creating a mixture of poisonous gases that could wipe out the entire population within hours of exposure.
+            </p>
+            <p>The only way to survive was to adapt.</p>
+            <h3>AT FIRST IT, WAS JUST AN IDEA.</h3>
+            <p>
+                Creating an exo-suit that somehow filtered the poisonous air well enough for human consumption seemed farfetched as a plan, but they didn’t have many ideas left.
+            </p>
+            <p>
+                In the end, thousands were produced only a year before the apocalypse.
+            </p>
+            <h3>BY THAT TIME.</h3>
+            <p>
+                By that time, the hints of Earth’s demise were starting to show. Many cities were underwater, and the sky had gained a permanent purple hue. Crops stopped growing and only genetically modified plants were able to thrive, - if only for a short time.
+            </p>
+            <h3>THE FACTORY.</h3>
+            <p>
+                The Factory was working on producing as many suits as possible with the limited manpower and resources they had. It was a hurried process, perhaps rushed as well, which later would lead to what people called “The Beginning of the End.”
+            </p>            
         </div>
         <div>
-            collection  
+            collection
         </div>
         <div>
-            utility          
+            utility
         </div>
         <div>
-            tokenomics          
+            tokenomics
         </div>
         <div>
-            team          
+            team
         </div>
     </main>
     <footer>
