--- a/xtron/xtron.html
+++ b/xtron/xtron.html
@@ -29,7 +29,6 @@
     </header>
     <main>
         <div>
-            <img src="sources/patterns/prism.jpg" alt="">
             <h1>
                 WELCOME TO THE COLLECTIVE
             </h1>
@@ -53,19 +52,42 @@
             <h3>THE FACTORY.</h3>
             <p>
                 The Factory was working on producing as many suits as possible with the limited manpower and resources they had. It was a hurried process, perhaps rushed as well, which later would lead to what people called “The Beginning of the End.”
-            </p>            
+            </p> 
         </div>
         <div>
-            collection
+            <h2>COLLECTION</h2>
+            <p></p>
         </div>
         <div>
-            utility
+            <h2>UTILITY</h2>
+            <p></p>
         </div>
         <div>
-            tokenomics
+            <h2>TOKENOMICS</h2>
+            <p></p>
         </div>
-        <div>
-            team
+        <div class="team">
+            <h2>TEAM</h2>
+            <div>
+                <div>
+                    <img src="../sources/pfps/roxtar.jpg" alt="roxtar">
+                    <h3>Roxtar</h3>
+                    <p>The founder itself, the brain and the visionary, holding the community together</p>
+                    <a href="https://twitter.com/R0XTAR_"><img src="../sources/logo/ogtwitter.png" alt="Roxtar's Twitter"></a>
+                </div>
+                <div>
+                    <img src=../sources/pfps/incredible.jpg" alt="incredible">
+                    <h3>IsIncredible</h3>
+                    <p>The blockchain wizard, making it happen through smart contracts</p>
+                    <a href="https://twitter.com/xyzcoll3ctiv3?s=21&t=bC7Ht8okpB7FCH8RgV_y-g"><img src="../sources/logo/ogtwitter.png" alt="IsIncredible's Twitter"></a>
+                </div>
+                <div>
+                    <img src="../sources/pfps/779.png" alt="joelmustdeploy">
+                    <h3>JoelMustDeploy</h3>
+                    <p>The web dev, the one who made the beautiful site you are staring at right now</p>
+                    <a href="https://twitter.com/JoelButCrypto"><img src="../sources/logo/ogtwitter.png" alt="Joel's Twitter"></a>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
