basic content structure

--- a/xtron/xtron.html
+++ b/xtron/xtron.html
@@ -28,16 +28,17 @@
         </nav>
     </header>
     <main>
-        <div>
-            <h1>
-                WELCOME TO THE COLLECTIVE
-            </h1>
+        <h1>
+            WELCOME TO THE COLLECTIVE
+        </h1>
+        <div class="lore">
             <h2>LORE</h2>
             <h3>TEN YEARS AGO, THE COUNTDOWN STARTED.</h3>
             <p>
                 After thousands years of destruction, humanity’s home was finally reaching it’s last days. The atmosphere was slowly collapsing in on itself, in turn creating a mixture of poisonous gases that could wipe out the entire population within hours of exposure.
             </p>
             <p>The only way to survive was to adapt.</p>
+            <br>
             <h3>AT FIRST IT, WAS JUST AN IDEA.</h3>
             <p>
                 Creating an exo-suit that somehow filtered the poisonous air well enough for human consumption seemed farfetched as a plan, but they didn’t have many ideas left.
@@ -45,14 +46,17 @@
             <p>
                 In the end, thousands were produced only a year before the apocalypse.
             </p>
+            <br>
             <h3>BY THAT TIME.</h3>
             <p>
                 By that time, the hints of Earth’s demise were starting to show. Many cities were underwater, and the sky had gained a permanent purple hue. Crops stopped growing and only genetically modified plants were able to thrive, - if only for a short time.
             </p>
+            <br>
             <h3>THE FACTORY.</h3>
             <p>
                 The Factory was working on producing as many suits as possible with the limited manpower and resources they had. It was a hurried process, perhaps rushed as well, which later would lead to what people called “The Beginning of the End.”
-            </p> 
+            </p>
+            <br>
         </div>
         <div>
             <h2>COLLECTION</h2>
