team section fixed

--- a/xtron/xtron.html
+++ b/xtron/xtron.html
@@ -80,7 +80,7 @@
                     <a href="https://twitter.com/R0XTAR_"><img src="../sources/logo/ogtwitter.png" alt="Roxtar's Twitter"></a>
                 </div>
                 <div>
-                    <img src=../sources/pfps/incredible.jpg" alt="incredible">
+                    <img src="../sources/pfps/incredible.jpg" alt="incredible">
                     <h3>IsIncredible</h3>
                     <p>The blockchain wizard, making it happen through smart contracts</p>
                     <a href="https://twitter.com/xyzcoll3ctiv3?s=21&t=bC7Ht8okpB7FCH8RgV_y-g"><img src="../sources/logo/ogtwitter.png" alt="IsIncredible's Twitter"></a>
