--- a/xtron/xtron.html
+++ b/xtron/xtron.html
@@ -64,12 +64,30 @@
             <p></p>
         </div>
         <div>
-            <h2>UTILITY</h2>
-            <p></p>
+            <h2>SOCIABL3</h2>
+            <h3>Our App Description</h3>
+            <br>
+            <h3>What is this?</h3>
+            <p>
+                We want to build the first decentralized social network. With our app you will be able to:
+            </p>
         </div>
         <div>
             <h2>TOKENOMICS</h2>
-            <p></p>
+            <h3>$XEON, the governance token supported on the Solana Blockchain</h3>
+            <ul>
+                <li>The maximum supply is 150,000,000 $XEON.</li>
+                <li>There will be 5 halving periods, with each reducing staking rewards by 25%:</li>
+                <ol>
+                    <li>30,000,000 $XEON rewarded.</li>
+                    <li>60,000,000 $XEON rewarded.</li>
+                    <li>90,000,000 $XEON rewarded.</li>
+                    <li>120,000,000 $XEON rewarded.</li>
+                    <li>140,000,000 $XEON rewarded.</li>
+                </ol>
+            </ul>
+            <h3>Staking</h3>
+            <p>It will be the main way to obtain $XEON and it will be rarity based, this meaning more income from rarer traits.</p>
         </div>
         <div class="team">
             <h2>TEAM</h2>
